--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,6 +1,5 @@
 // http://ionicframework.com/docs/theming/
 
-
 // App Global Sass
 // --------------------------------------------------
 // Put style rules here that you want to apply globally. These
@@ -14,3 +13,17 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+.main {
+  background: #333b5b;
+  color: #ffffff;
+}
+.temp {
+  font-size: 70px;
+  text-align: center;
+  font-weight: normal;
+}
+
+.location, .icon, .desc {
+  text-align: center;
+}
